# FastApiTutos

./: README.md  pyproject.toml
docs/: 2_simpleExp.md
fast_api/: main.py  modelname.py  product.py
