[tool.poetry]
name = "fastapitutos"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# This equals to pip install "fastapi[all]" or poetry add fastapi[all]
fastapi = {extras = ["all"], version = "^0.70"}
uvicorn = "^0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
